tests/snapshots/examples_fixtures/type_system__failing__68_adt_nested_list_non_exhaustive.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/68_adt_nested_list_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E083]: Non-Exhaustive ADT Match

Match is non-exhaustive: nested list patterns under constructor `Boxed` field #1 miss non-empty list cases.

  examples/type_system/failing/68_adt_nested_list_non_exhaustive.flx:9:5
   |
 9 |     match w {
   |     ^^^^^^^^^
10 |         Boxed([]) -> 0,
   | ^^^^^^^^^^^^^^^^^^^^^^^
11 |         Empty -> 0,
   | ^^^^^^^^^^^^^^^^^^^
12 |     }
   | ^^^^^

Hint:
  Add a `[h | t]` nested pattern or a nested catch-all (`_`).
== stdout ==
<not executed>
